--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
+  dio: ^2.1.0
+  flutter_swiper: ^1.1.4
+  flutter_screenutil: ^0.5.1
+  url_launcher: ^5.0.2
+  flutter_easyrefresh: ^1.2.7
+  provide: ^1.0.2
+  fluro: ^1.4.0
+  flutter_color_plugin: ^0.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
