--- a/ios/Flutter/App.framework/flutter_assets/AssetManifest.json
+++ b/ios/Flutter/App.framework/flutter_assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"images/qq.png":["images/qq.png"],"images/wechat.png":["images/wechat.png"]}
