--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,14 @@ dependencies:
   dio: ^2.1.0
   flutter_swiper: ^1.1.4
   flutter_screenutil: ^0.5.1
+  # 这插件的作用用于打开第三方app 或者拨打手机
   url_launcher: ^5.0.2
   flutter_easyrefresh: ^1.2.7
   provide: ^1.0.2
   fluro: ^1.4.0
   flutter_color_plugin: ^0.0.2
+  image_picker: ^0.5.4+3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -48,9 +51,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - images/qq.png
+    - images/wechat.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
