--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   fluro: ^1.4.0
   flutter_color_plugin: ^0.0.2
   image_picker: ^0.5.4+3
+  http: ^0.12.0+2
+  shared_preferences: ^0.5.2
+  #webview的插件
+  flutter_webview_plugin: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
